--- a/Gelar_pretest.ipynb
+++ b/Gelar_pretest.ipynb
@@ -446,40 +446,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "total_day_minutes                1.000000\n",
-       "total_day_charge                 1.000000\n",
-       "total_intl_minutes               0.019486\n",
-       "total_night_minutes              0.011799\n",
-       "total_night_charge               0.011783\n",
-       "total_eve_charge                 0.010760\n",
-       "total_eve_minutes                0.010750\n",
-       "total_eve_calls                  0.008128\n",
-       "number_vmail_messages            0.005381\n",
-       "total_night_calls                0.004236\n",
-       "number_customer_service_calls    0.002733\n",
-       "total_day_calls                  0.001935\n",
-       "total_intl_calls                 0.001303\n",
-       "total_intl_calls                 0.001303\n",
-       "Name: total_day_minutes, dtype: float64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "abs(cust_db[numeric_variable].corr()['total_day_minutes']).sort_values(ascending=False).head(14)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -809,11 +775,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Korelasi Total Minutes ke Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "total_day_minutes                1.000000\n",
+       "total_day_charge                 1.000000\n",
+       "total_intl_minutes               0.019486\n",
+       "total_night_minutes              0.011799\n",
+       "total_night_charge               0.011783\n",
+       "total_eve_charge                 0.010760\n",
+       "total_eve_minutes                0.010750\n",
+       "total_eve_calls                  0.008128\n",
+       "number_vmail_messages            0.005381\n",
+       "total_night_calls                0.004236\n",
+       "number_customer_service_calls    0.002733\n",
+       "total_day_calls                  0.001935\n",
+       "total_intl_calls                 0.001303\n",
+       "total_intl_calls                 0.001303\n",
+       "Name: total_day_minutes, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(cust_db[numeric_variable].corr()['total_day_minutes']).sort_values(ascending=False).head(14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Profiling Customer Churn dan Stay"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## grouping class ke churn dan stay cutomer type\n",
     "class_group = [\"Churn\" if x>= 1 else \"Stay\" for x in cust_db['class']]\n",
     "cust_db['class_group'] = class_group"
    ]
@@ -830,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -842,12 +857,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Average dari customer stay untuk total usage\n",
     "column_select = ['total_day_charge','total_day_minutes', 'total_day_calls']\n",
     "\n",
     "stay_cb[column_select].mean().round(2)"
@@ -873,6 +889,7 @@
     }
    ],
    "source": [
+    "## Average dari customer churn untuk total usage\n",
     "churn_cb[column_select].mean().round(2)"
    ]
   },
@@ -894,12 +911,14 @@
     }
    ],
    "source": [
+    "## Top kontributor state dari customer stay\n",
+    "\n",
     "stay_cb['state'].mode().round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -909,18 +928,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Top kontributor state dari customer churn\n",
     "churn_cb['state'].mode().round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -943,18 +963,19 @@
        "Name: total_day_charge, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## korelasi total day charge untuk churn customer\n",
     "abs(churn_cb[numeric_variable].corr()['total_day_charge']).sort_values(ascending=False).head(14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -977,12 +998,13 @@
        "Name: total_day_charge, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## korelasi total day charge untuk stay customer\n",
     "abs(stay_cb[numeric_variable].corr()['total_day_charge']).sort_values(ascending=False).head(14)"
    ]
   },
